// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render BugData component correctly with bug data 1`] = `
<DocumentFragment>
  <div
    class="bug-data"
  >
    <div
      class="bug-data__title-desc"
    >
      <div>
        <div
          class="active-point"
        >
          <abbr
            title="Active"
          >
            <div
              class="is-active active"
            />
          </abbr>
        </div>
        <abbr
          title="Priority: medium"
        >
          <h3
            class="bug__title medium"
          >
            Bug title
          </h3>
        </abbr>
      </div>
      <p
        class="bug__description"
      >
        Bug description
      </p>
    </div>
    <div
      class="bug-data__user-time"
    >
      <p
        class="bug__user"
      >
        <span
          class="static-text"
        >
          By: 
        </span>
        admin
      </p>
      <p
        class="bug__time"
      >
        <span
          class="static-text"
        >
          On: 
        </span>
        now
      </p>
    </div>
    <div>
      <span
        class="static-text"
      >
        Users in: 
      </span>
      <span>
        admin 
      </span>
      <span>
        1 
      </span>
    </div>
    <div>
      <span
        class="static-text"
      >
        Admins in: 
      </span>
      <span>
        admin 
      </span>
      <span>
        1 
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render BugData component correctly without bug data 1`] = `
<DocumentFragment>
  <div
    class="bug-data"
  >
    <div
      class="bug-data__title-desc"
    >
      <div>
        <div
          class="active-point"
        >
          <abbr
            title="Not Active"
          >
            <div
              class="is-active not-active"
            />
          </abbr>
        </div>
        <abbr
          title="Priority: undefined"
        >
          <h3
            class="bug__title undefined"
          />
        </abbr>
      </div>
      <p
        class="bug__description"
      />
    </div>
    <div
      class="bug-data__user-time"
    >
      <p
        class="bug__user"
      >
        <span
          class="static-text"
        >
          By: 
        </span>
      </p>
      <p
        class="bug__time"
      >
        <span
          class="static-text"
        >
          On: 
        </span>
      </p>
    </div>
    <div>
      <span
        class="static-text"
      >
        Users in: 
      </span>
    </div>
    <div>
      <span
        class="static-text"
      >
        Admins in: 
      </span>
    </div>
  </div>
</DocumentFragment>
`;
